# thermostat

./: CMakeLists.txt  README.md
src/: temperature_controller.h  thermometer.h  thermostat.cc  thermostat.h
src/test/: mock_temperature_controller.h  mock_thermometer.h
test/: thermostat_test.cc
